test/neg/neg-global_ptr2.cpp
#include <upcxx/upcxx.hpp>

int main() {
  upcxx::init();

  upcxx::global_ptr<int&> gp;
  
  upcxx::finalize();
}
